--- a/Frontend-PI/Views/Publication/Details.cshtml
+++ b/Frontend-PI/Views/Publication/Details.cshtml
@@ -1,9 +1,62 @@
 ﻿@model Frontend_PI.Models.Publication
 
-
 @{
     ViewBag.Title = "Details";
 }
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script type="text/javascript">
+
+    $(document).ready(function () {
+
+
+        $("#valider").click(function () {
+
+            if (confirm('vous souhaitez Poster un commentaire ?')) {
+                //alert($('#comment').val());
+                //alert($(this).prop('name'))
+                /**/
+                debugger;
+                var comment = $('#comment').val();
+                ajouterComment(comment, @ViewBag.idp);
+    /**/
+}
+
+});
+
+
+
+}
+    );
+
+    function ajouterComment(cm, idp) {
+        debugger;
+        $.ajax({
+            async: true,
+            type: 'POST',
+            dataType: 'JSON',
+            contentType: 'application/json;charset=utf-8',
+            url: '/Comment/Create/',
+            data: JSON.stringify({
+                comment: cm,
+                idpublication: idp
+
+
+            })
+            ,
+            success: function (data) {
+                location.reload();
+
+            },
+            error: function (err) {
+                location.reload();
+                //alert(err + "un erreur a été survenu veuillez contactez votre administrateur ");
+            }
+
+
+        })
+    }
+</script>
 
 <!--************************************
             Inner Banner Start
@@ -17,7 +70,7 @@
                     <ol class="tg-breadcrumb">
                         <li><a href="javascript:void(0);">home</a></li>
                         <li><a href="javascript:void(0);">Publication</a></li>
-                        <li class="tg-active">@Html.DisplayNameFor(model => model.title)</li>
+                        <li class="tg-active">@Html.DisplayFor(model => model.title)</li>
                     </ol>
                 </div>
             </div>
@@ -40,14 +93,13 @@
                 <div id="tg-twocolumns" class="tg-twocolumns">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <figure class="tg-newsdetailimg">
-                            <img src="@Html.DisplayNameFor(model => model.image)" alt="image description">
                             <figcaption class="tg-author">
                                 <img src="~/Content/images/author/imag-26.jpg" alt="image description">
                                 <div class="tg-authorinfo">
-                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">@Html.DisplayNameFor(model => model.user.firstName) @Html.DisplayNameFor(model => model.user.lastName)</a></span>
+                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">@Html.DisplayFor(model => model.user.firstName) @Html.DisplayFor(model => model.user.lastName)</a></span>
                                     <ul class="tg-postmetadata">
-                                        <li><a href="javascript:void(0);"><i class="fa fa-comment-o"></i><i>@Html.DisplayNameFor(model => model.nbLike)</i></a></li>
-                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>@Html.DisplayNameFor(model => model.nbDisLike)</i></a></li>
+                                        <li><a><i class="fa fa-thumbs-up"></i><i>@Html.DisplayFor(model => model.nbLike)&nbsp;&nbsp;</i></a></li>
+                                        <li><a href="javascript:void(0);"><i class="fa fa-thumbs-down"></i><i>@Html.DisplayFor(model => model.nbDisLike)&nbsp;&nbsp;</i></a></li>
                                     </ul>
                                 </div>
                             </figcaption>
@@ -88,7 +140,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                @Html.Partial("~/Views/Comment/IndexAdminComment.cshtml")
+                                @foreach (var item in @ViewBag.comments)
+                                {
+                                    @item.content
+                                }
                                 <div class="tg-leaveyourcomment">
                                     <div class="tg-sectionhead">
                                         <h2>Leave Your Comment</h2>
@@ -96,10 +151,10 @@
                                     <form class="tg-formtheme tg-formleavecomment">
                                         <fieldset>
                                             <div class="form-group">
-                                                <textarea placeholder="Comment"></textarea>
+                                                <textarea placeholder="Comment" id="comment"></textarea>
                                             </div>
                                             <div class="form-group">
-                                                <a class="tg-btn tg-active" href="javascript:void(0);">Submit</a>
+                                                <a class="tg-btn tg-active" id="valider" href="javascript:void(0);">Submit</a>
                                             </div>
                                         </fieldset>
                                     </form>
@@ -107,16 +162,9 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 pull-left">
                         <aside id="tg-sidebar" class="tg-sidebar">
-                            <div class="tg-widget tg-widgetsearch">
-                                <form class="tg-formtheme tg-formsearch">
-                                    <div class="form-group">
-                                        <button type="submit"><i class="icon-magnifier"></i></button>
-                                        <input type="search" name="search" class="form-group" placeholder="Search Here">
-                                    </div>
-                                </form>
-                            </div>
                             <div class="tg-widget tg-catagories">
                                 <div class="tg-widgettitle">
                                     <h3>Categories</h3>
