--- a/Frontend-PI/Views/Publication/Index.cshtml
+++ b/Frontend-PI/Views/Publication/Index.cshtml
@@ -54,29 +54,29 @@
                                                 <figure><a href=#><img src="@Html.DisplayFor(modelItem => item.image)" alt="image description"></a></figure>
                                                 <div class="tg-postcontent">
                                                     <ul class="tg-bookscategories">
-                                                        <li><a href="javascript:void(0);">Adventure</a></li>
-                                                        <li><a href="javascript:void(0);">Fun</a></li>
+                                                        <li><a href="javascript:void(0);">Books</a></li>
+                                                        <li><a href="javascript:void(0);">Life</a></li>
                                                     </ul>
                                                     <div class="tg-themetagbox"><span class="tg-themetag">featured</span></div>
                                                     <div class="tg-posttitle">
                                                         <h3>@Html.ActionLink(@Html.DisplayFor(modelItem => item.title).ToString(), "Details", new { id = item.id })</h3>
-                                                        
+
                                                     </div>
                                                     <div class="tg-description">
-                                                        <p> @Html.DisplayFor(modelItem => item.content) <a href="javascript:(0);"> <br><br>More</a></p>
+                                                        <p> @Html.DisplayFor(modelItem => item.contentTrimmed) <a href="javascript:(0);"> <br><br>More</a></p>
                                                     </div>
                                                     <span class="tg-bookwriter">By: <a href="javascript:void(0);">@Html.DisplayFor(modelItem => item.user.firstName) @Html.DisplayFor(modelItem => item.user.lastName)</a></span>
                                                     <ul class="tg-postmetadata">
-                                                        <li><a href="javascript:void(0);"><i class="fa fa-comment-o"></i><i>21,415 Comments</i></a></li>
-                                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>@Html.DisplayFor(modelItem => item.nbLike)</i></a></li>
-                                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>@Html.DisplayFor(modelItem => item.nbDisLike)</i></a></li>
+                                                        <br>
+                                                        <li><a href="javascript:void(0);"><i class="fa fa-thumbs-up"></i><i>@Html.DisplayFor(modelItem => item.nbLike)&nbsp&nbsp&nbsp</i></a></li>
+                                                        <li><a href="javascript:void(0);"><i class="fa fa-thumbs-down"></i><i>@Html.DisplayFor(modelItem => item.nbDisLike)&nbsp&nbsp&nbsp</i></a></li>
 
                                                     </ul>
                                                 </div>
                                             </article>
                                         </div>
                                     }
-                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
