--- a/Frontend-PI/Views/Product/AllProducts.cshtml
+++ b/Frontend-PI/Views/Product/AllProducts.cshtml
@@ -123,7 +123,10 @@
         <div class="modal fade" id="form" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
-                    <div class="text-right cross"> <i class="fa fa-times mr-2"></i> </div>
+                    <div class="text-right cross"> 
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button> </div>
                     <div class="card-body text-center">
                         <img src=" https://i.imgur.com/d2dKtI7.png" height="100" width="100">
                         <div class="comment-box text-center">
@@ -184,10 +187,6 @@
         var idclicked = $(this).attr('id');
         var qtyValue = $("#"+idclicked+"qty").val();
 
-        $(this).attr("disabled", "disabled");
-        $(this).css("pointer-events", "none");
-        $("#" + idclicked + "qty").attr("disabled", "disabled");
-
         //alert(qtyValue);
 
         $.ajax({
@@ -200,6 +199,9 @@
                 console.log(response);//respReturn.replace(/"([^"]+)":/g, '$1:');
                 if (response.Message === "SUCCESS") {
                     //alert('yes');
+                    $(this).attr("disabled", "disabled");
+                    $(this).css("pointer-events", "none");
+                    $("#" + idclicked + "qty").attr("disabled", "disabled");
                     document.getElementById('showModalConfirmAdd').click();
                     storage.removeItem('productIdInList');
                 }
