--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -188,10 +188,12 @@
                                         </div>
                                     </div>
                                     <div class="dropdown tg-themedropdown tg-minicartdropdown">
-                                        <a href="javascript:void(0);" id="tg-minicart" class="tg-btnthemedropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <span class="tg-themebadge">3</span>
+                                        <a href="/Product/CommandeDetails" id="tg-minicart" class="tg-btnthemedropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            @if (Session["commandeDetailsList"] != null) {
+                                                List<Frontend_PI.Models.CommandeDetails> commandeDetails = (List<Frontend_PI.Models.CommandeDetails>)Session["commandeDetailsList"];
+                                            <span class="tg-themebadge">@commandeDetails.Count</span>
                                             <i class="icon-cart"></i>
-                                            <span>$123.00</span>
+                                            }
                                         </a>
                                         <div class="dropdown-menu tg-themedropdownmenu" aria-labelledby="tg-minicart">
                                             <div class="tg-minicartbody">
